# hackathon-2-phase-3

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  ENV_VARIABLES.md  PHASE3_SETUP.md  PROJECT_SUMMARY.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  constitution.md  docker-compose.yml
.spec-kit/: config.yaml
backend/: CLAUDE.md  SETUP.md  pyproject.toml  render.yaml  requirements.txt  start.sh  vercel.json
backend/api/: index.py
backend/app/: auth.py  config.py  database.py  main.py  models.py
backend/app/agents/: __init__.py  todo_agent.py
backend/app/mcp/: __init__.py  tools.py
backend/app/routes/: auth.py  chat.py  tasks.py
frontend/: CLAUDE.md  next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/ui/: task-card.tsx  task-form.tsx
frontend/lib/: api.ts  auth.ts
frontend/types/: index.ts
